--- a/_data/news.yml
+++ b/_data/news.yml
@@ -1,4 +1,6 @@
 - normal:
+    content:  "<strong>May 2023:</strong> Our paper <strong>Facial Action Unit Detection via Adaptive Attention and Relation</strong> is accepted by <i>IEEE TIP</i>."
+- normal:
     content:  "<strong>Jan. 2023:</strong> I am a recipient of <strong>Outstanding Young Teacher Program of China University of Mining and Technology</strong>."    
 - normal:
     content:  "<strong>Jan. 2023:</strong> I serve as a Publication Chair in <i>Computer Graphics International (CGI) 2023</i>."
