--- a/_data/projects.yml
+++ b/_data/projects.yml
@@ -1,4 +1,10 @@
 - normal:
+    content:  "<strong>2023:</strong> <strong>Anti-Drowning Safety Management System in Swimming Venue Based on AI and Big Data Analysis</strong>, <i>Principal Investigator</i>"
+- normal:
+    content:  "<strong>2023:</strong> <strong>Opening Fund of Key Lab of Image Processing and Intelligent Control, Ministry of Education</strong>, <i>Principal Investigator</i>"
+- normal:
+    content:  "<strong>2023:</strong> <strong>General Project of China Postdoctoral Science Foundation</strong>, <i>Principal Investigator</i>"
+- normal:
     content:  "<strong>2023:</strong> <strong>Outstanding Young Teacher Program of China University of Mining and Technology</strong>, <i>Principal Investigator</i>"
 - normal:
     content:  "<strong>2022:</strong> <strong>Participation in Computer Graphics International (CGI) 2022 Supported by K.C.Wong Education Foundation</strong>, <i>Principal Investigator</i>"
