--- a/_data/news.yml
+++ b/_data/news.yml
@@ -1,4 +1,8 @@
 - normal:
+    content:  "<strong>July 2023:</strong> Our paper <strong>CT-Net: Arbitrary-Shaped Text Detection via Contour Transformer</strong> is accepted by <i>IEEE TCSVT</i>."
+- normal:
+    content:  "<strong>June 2023:</strong> I am a recipient of <strong>General Project of China Postdoctoral Science Foundation</strong>."    
+- normal:
     content:  "<strong>May 2023:</strong> Our paper <strong>Facial Action Unit Detection via Adaptive Attention and Relation</strong> is accepted by <i>IEEE TIP</i>."
 - normal:
     content:  "<strong>Jan. 2023:</strong> I am a recipient of <strong>Outstanding Young Teacher Program of China University of Mining and Technology</strong>."    
