--- a/_data/publications.yml
+++ b/_data/publications.yml
@@ -1,3 +1,31 @@
+- title: 'CT-Net: Arbitrary-Shaped Text Detection via Contour Transformer'
+  #date:  'Jul. 2018'
+  imgurl: '/images/projects/2023/shao2023ctnet.png'
+  selected: true
+  authors:
+    - name: <strong>Zhiwen Shao</strong>
+      url:  'https://zhiwenshao.github.io/'
+    - name: Yuchen Su
+      url:  false 
+    - name: Yong Zhou
+      url:  false 
+    - name: Fanrong Meng
+      url:  false  
+    - name: Hancheng Zhu
+      url:  'https://zhuhancheng.github.io/'      
+    - name: Bing Liu
+      url:  false
+    - name: Rui Yao
+      url:  'https://ruiyao.bitbucket.io/'
+  publisher:  'IEEE Transactions on Circuits and Systems for Video Technology (TCSVT), 2023'
+  status:   '(CCF B, SCI Q1)'
+  #place:   'in San Diego, USA'
+  desc: 'We propose a novel arbitrary-shaped scene text detection framework named CT-Net by progressive contour regression with contour transformers. Specifically, we first employ a contour initialization module that generates coarse text contours without any post-processing. Then, we adopt contour refinement modules to adaptively refine text contours in an iterative manner, which are beneficial for context information capturing and progressive global contour deformation. Besides, we propose an adaptive training strategy to enable the contour transformers to learn more potential deformation paths, and introduce a re-score mechanism that can effectively suppress false positives.'
+  tags:
+    #- name: 'arXiv'
+    #  url:  'https://arxiv.org/abs/2001.01168'
+    
+    
 - title: 'Facial Action Unit Detection via Adaptive Attention and Relation'
   #date:  'Jul. 2018'
   imgurl: '/images/projects/2023/shao2023facial.png'
