--- a/_data/publications.yml
+++ b/_data/publications.yml
@@ -19,7 +19,7 @@
       url:  'https://ruiyao.bitbucket.io/'
   publisher:  'IEEE Transactions on Circuits and Systems for Video Technology (TCSVT), 2023'
   status:   '(CCF B, SCI Q1)'
-  #place:   'in San Diego, USA'
+  #place:   'in Ottawa, Canada'
   desc: 'We propose a novel arbitrary-shaped scene text detection framework named CT-Net by progressive contour regression with contour transformers. Specifically, we first employ a contour initialization module that generates coarse text contours without any post-processing. Then, we adopt contour refinement modules to adaptively refine text contours in an iterative manner, which are beneficial for context information capturing and progressive global contour deformation. Besides, we propose an adaptive training strategy to enable the contour transformers to learn more potential deformation paths, and introduce a re-score mechanism that can effectively suppress false positives.'
   tags:
     - name: 'arXiv'
@@ -44,7 +44,7 @@
       url:  'https://web.xidian.edu.cn/ldli/en/index.html'
   publisher:  'ACM MM 2023'
   status:   '(CCF A)'
-  #place:   'in London, United Kingdom'
+  place:   'in Ottawa, Canada'
   desc: 'We first build a fine-grained feature extraction (FFE) module to obtain the refined local features of image attributes to compensate for holistic features. The FFE module is then used to generate user-level features, which are combined with the image-level features to obtain user-preferred fine-grained feature representations. By training extensive users' PIAA tasks, the aesthetic distribution of most users can be transferred to the personalized scores of individual users. To enable our proposed model to learn more generalizable aesthetics among individual users, we incorporate the degree of dispersion between users' personalized scores and image aesthetic distribution as a coefficient in the loss function during model training.'
   #tags:
     #- name: 'arXiv'
