--- a/_data/publications.yml
+++ b/_data/publications.yml
@@ -960,7 +960,7 @@
       url:  false
     - name: <strong>Zhiwen Shao</strong>
       url:  'https://zhiwenshao.github.io/'
-    - name: Wen-Liang Du
+    - name: Wenliang Du
       url:  false
     - name: Guangcheng Wang
       url:  false
