--- a/_data/alumni.yml
+++ b/_data/alumni.yml
@@ -1,2 +1,16 @@
 - normal:
-    content:  "Yuchen Su - Master from CUMT, 2023. Current Position: Ph.D. Candidate, Fudan University"
+    content:  "Yuchen Su - Master from CUMT, 2023. Position: Ph.D. Candidate, Fudan University"
+- normal:
+    content:  "Feiran Li - Undergraduate from CUMT, 2023. Position: Ph.D. Candidate, University of Chinese Academy of Sciences"
+- normal:
+    content:  "Yutian Zhang - Undergraduate from CUMT, 2023. Position: Master, Shanghai Jiao Tong University"
+- normal:
+    content:  "Qing Yu - Undergraduate from CUMT, 2023. Position: Master, Wuhan University"
+- normal:
+    content:  "Ying Sun - Undergraduate from CUMT, 2022. Position: Master, Wuhan University"
+- normal:
+    content:  "Lixiang Xu - Undergraduate from CUMT, 2022. Position: Master, Xidian University"
+- normal:
+    content:  "Chaoyi Ai - Undergraduate from CUMT, 2021. Position: Master, ShanghaiTech University"
+- normal:
+    content:  "Hongyu Wan - Undergraduate from CUMT, 2021. Position: Master, Northeastern University, USA"    
