--- a/_data/publications.yml
+++ b/_data/publications.yml
@@ -32,7 +32,7 @@
   authors:
     - name: Hancheng Zhu
       url:  'https://zhuhancheng.github.io/'    
-    - name: <strong>Zhiwen Shao</strong>
+    - name: <strong>Zhiwen Shao*</strong>
       url:  'https://zhiwenshao.github.io/'  
     - name: Yong Zhou
       url:  false
