--- a/_data/projects.yml
+++ b/_data/projects.yml
@@ -1,4 +1,6 @@
 - normal:
+    content:  "<strong>2023:</strong> <strong>Hong Kong Scholars Program</strong>, <i>Principal Investigator</i>"
+- normal:
     content:  "<strong>2023:</strong> <strong>Anti-Drowning Safety Management System in Swimming Venue Based on AI and Big Data Analysis</strong>, <i>Principal Investigator</i>"
 - normal:
     content:  "<strong>2023:</strong> <strong>Opening Fund of Key Laboratory of Image Processing and Intelligent Control (Huazhong University of Science and Technology), Ministry of Education</strong>, <i>Principal Investigator</i>"
