--- a/_data/news.yml
+++ b/_data/news.yml
@@ -1,4 +1,6 @@
 - normal:
+    content:  "<strong>August 2023:</strong> I am a recipient of <strong>Hong Kong Scholars Program</strong>."
+- normal:
     content:  "<strong>July 2023:</strong> Our paper <strong>CT-Net: Arbitrary-Shaped Text Detection via Contour Transformer</strong> is accepted by <i>IEEE TCSVT</i>."
 - normal:
     content:  "<strong>June 2023:</strong> I am a recipient of <strong>General Project of China Postdoctoral Science Foundation</strong>."    
