--- a/_data/news.yml
+++ b/_data/news.yml
@@ -1,5 +1,5 @@
 - normal:
-    content:  "<strong>August 2023:</strong> I am a recipient of <strong>Hong Kong Scholars Program</strong>."
+    content:  "<strong>Aug. 2023:</strong> I am a recipient of <strong>Hong Kong Scholars Program</strong>."
 - normal:
     content:  "<strong>July 2023:</strong> Our paper <strong>CT-Net: Arbitrary-Shaped Text Detection via Contour Transformer</strong> is accepted by <i>IEEE TCSVT</i>."
 - normal:
