--- a/_data/teachings.yml
+++ b/_data/teachings.yml
@@ -1,7 +1,9 @@
 - normal:
-    content:  "<strong>2022:</strong> <strong>Image Processing and Computer Vision</strong>, <i>Lecturer (Principal of Course)</i>"
+    content:  "<strong>2023 - Present:</strong> <strong>Introduction to Information Science</strong>, <i>Lecturer</i>"
 - normal:
-    content:  "<strong>2022:</strong> <strong>Practice for Python Programming</strong>, <i>Lecturer</i>"
+    content:  "<strong>2022 - Present:</strong> <strong>Image Processing and Computer Vision</strong>, <i>Lecturer (Principal of Course)</i>"
+- normal:
+    content:  "<strong>2022 - Present:</strong> <strong>Practice for Python Programming</strong>, <i>Lecturer</i>"
 - normal:
     content:  "<strong>2021:</strong> <strong>Computational Thinking and Artificial Intelligence Foundation</strong>, <i>Teaching Assistant</i>"    
 - normal:
