--- a/_data/publications.yml
+++ b/_data/publications.yml
@@ -140,7 +140,7 @@
       url:  'https://zhuhancheng.github.io/'    
     - name: <strong>Zhiwen Shao*</strong>
       url:  'https://zhiwenshao.github.io/'  
-    - name: Yong Zhou
+    - name: Yong Zhou*
       url:  false
     - name: Guangcheng Wang
       url:  false
