--- a/_data/news.yml
+++ b/_data/news.yml
@@ -1,4 +1,6 @@
 - normal:
+    content:  "<strong>Jan. 2024:</strong> I am now studying at <strong>Hong Kong University of Science and Technology (HKUST)</strong> as a postdoctoral fellow, advised by <a href='https://sites.google.com/view/dyyeung'>Prof. Dit-Yan Yeung</a>."
+- normal:
     content:  "<strong>Aug. 2023:</strong> I am a recipient of <strong>Hong Kong Scholars Program</strong>."
 - normal:
     content:  "<strong>July 2023:</strong> Our paper <strong>CT-Net: Arbitrary-Shaped Text Detection via Contour Transformer</strong> is accepted by <i>IEEE TCSVT</i>."
@@ -33,4 +35,4 @@
 - normal:
     content:  "<strong>July 2018:</strong> Our paper <strong>Deep Adaptive Attention for Joint Facial Action Unit Detection and Face Alignment</strong> is accepted by <i>ECCV 2018</i>."
 - normal:
-    content:  "<strong>Nov. 2017:</strong> I am now studying at Multimedia and Interactive Computing Lab of <strong>Nanyang Technological University (NTU)</strong>, Singapore as a Research Assistant, advised by <a href='https://research.monash.edu/en/persons/jianfei-cai/'>Prof. Jianfei Cai</a>."
+    content:  "<strong>Nov. 2017:</strong> I am now studying at Multimedia and Interactive Computing Lab of <strong>Nanyang Technological University (NTU)</strong>, Singapore as a research assistant, advised by <a href='https://research.monash.edu/en/persons/jianfei-cai/'>Prof. Jianfei Cai</a>."
