--- a/_data/services.yml
+++ b/_data/services.yml
@@ -7,6 +7,8 @@
 - normal:
     content:  "<strong>Member in China Society of Image and Graphics (CSIG):</strong> <strong>Professional Committee of Machine Vision, Professional Committee of Animation and Digital Entertainment</strong>"
 - normal:
+    content:  "<strong>Member in JiangSu association of Artificial Intelligence (JSAI):</strong> <strong>Professional Committee of Pattern Recognition, Professional Committee of Uncertain Artificial Intelligence</strong>"   
+- normal:
     content:  "<strong>Program Committee Member/Conference Reviewer:</strong> <strong>CVPR, IJCAI, AAAI, ACM MM, CGI, ICONIP, ICIG, NCIIP</strong>"
 - normal:
     content:  "<strong>Journal Reviewer:</strong> <strong>IEEE TPAMI, IJCV, IEEE TIP, IEEE TAFFC, IEEE TMM, Signal Processing, SPIC, IET IP, TVC, Computers & Graphics, IEEE Sensors, Journal of Electronic Imaging, Frontiers in Computer Science</strong>"
