--- a/_data/services.yml
+++ b/_data/services.yml
@@ -9,6 +9,6 @@
 - normal:
     content:  "<strong>Member in JiangSu association of Artificial Intelligence (JSAI):</strong> <strong>Professional Committee of Pattern Recognition, Professional Committee of Uncertain Artificial Intelligence</strong>"   
 - normal:
-    content:  "<strong>Program Committee Member/Conference Reviewer:</strong> <strong>CVPR, IJCAI, AAAI, ACM MM, CGI, ICONIP, ICIG, NCIIP</strong>"
+    content:  "<strong>Program Committee Member/Conference Reviewer:</strong> <strong>CVPR, ICCV, IJCAI, AAAI, ACM MM, CGI, ICONIP, ICIG, NCIIP</strong>"
 - normal:
     content:  "<strong>Journal Reviewer:</strong> <strong>IEEE TPAMI, IJCV, IEEE TIP, IEEE TAFFC, IEEE TMM, Signal Processing, SPIC, IET IP, TVC, Computers & Graphics, IEEE Sensors, Journal of Electronic Imaging, Frontiers in Computer Science</strong>"
