--- a/_data/services.yml
+++ b/_data/services.yml
@@ -1,4 +1,6 @@
 - normal:
+    content:  "<strong>Area Chair:</strong> <strong>ACM International Conference on Multimedia (MM) 2024</strong>"
+- normal:
     content:  "<strong>Publication Chair:</strong> <strong>Computer Graphics International (CGI) 2023</strong>"
 - normal:
     content:  "<strong>Session Chair:</strong> <strong>Computer Graphics International (CGI) 2022, Shanghai Cross-Media Intelligence and Computer Vision Forum 2019</strong>"
