--- a/_data/news.yml
+++ b/_data/news.yml
@@ -1,5 +1,5 @@
 - normal:
-    content:  "<strong>Jan. 2024:</strong> I serve as a Area Chair in <i>ACM International Conference on Multimedia (MM) 2024</i>."
+    content:  "<strong>Jan. 2024:</strong> I serve as an Area Chair in <i>ACM International Conference on Multimedia (MM) 2024</i>."
 - normal:
     content:  "<strong>Jan. 2024:</strong> I am now studying at <strong>Hong Kong University of Science and Technology (HKUST)</strong> as a postdoctoral fellow, advised by <a href='https://sites.google.com/view/dyyeung'>Prof. Dit-Yan Yeung</a>."
 - normal:
