--- a/_data/publications.yml
+++ b/_data/publications.yml
@@ -22,6 +22,33 @@
     #  url:  'https://arxiv.org/abs/2307.13310'
     - name: 'site'
       url:  'https://www.sciencedirect.com/science/article/pii/S0167865524000928'    
+
+- title: 'Visible and Infrared Object Tracking Based on Multimodal Hierarchical Relationship Modeling'
+  #date:  'Jul. 2018'
+  imgurl: '/images/projects/2024/yao2024visible.png'
+  selected: false
+  authors:
+    - name: Rui Yao
+      url:  'https://ruiyao.bitbucket.io/'
+    - name: Jiazhu Qiu
+      url:  false
+    - name: Yong Zhou
+      url:  false
+    - name: <strong>Zhiwen Shao</strong>
+      url:  'https://zhiwenshao.github.io/'    
+    - name: Bing Liu
+      url:  false
+    - name: Jiaqi Zhao
+      url:  false  
+    - name: Hancheng Zhu
+      url:  'https://zhuhancheng.github.io/'     
+  publisher:  'Image Analysis & Stereology, 2024'
+  status:   '(SCI Q4)'
+  #place:   'in Ottawa, Canada'
+  desc: 'We address these two critical issues by introducing a novel RGBT tracking framework centered on multimodal hierarchical relationship modeling.  Through the incorporation of multiple Transformer encoders and the deployment of self-attention mechanisms, we progressively aggregate and fuse multimodal image features at various stages of image feature learning.  Throughout the process of multimodal interaction within the network, we employ a dynamic component feature fusion module at the patch-level to dynamically assess the relevance of visible information within each region of the tracking scene.'
+  tags:
+    - name: 'site'
+      url:  'https://www.sciencedirect.com/science/article/pii/S0141938223001658'
       
 - title: 'Semantic Segmentation Method on Nighttime Road Scene Based on Trans-NightSeg'
   #date:  'Jul. 2018'
